--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ ADMIN_PASSWORD_HASH=$2b$12$qSx7VFtN.z0Fd7bfox/Sy.iOO9s248D5ygYQkbHF9zkapqh20Ecbm
 EMAIL_USER=bigggbossg006@gmail.com
 EMAIL_PASSWORD=wzhd egaw rkic hxqj
 SENHA_PADRAO=jogador123
+BACKUP_PROVIDER=google_drive
