--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,16 @@
-streamlit==1.46.1
-fpdf2==2.7.7
-python-dotenv==1.0.0
-bcrypt==4.1.2
-pyopenssl==23.3.0
-setuptools==68.2.0
-pillow==11.3.0
-dropbox
-psutil>=5.8.0
+# Dependências principais para Streamlit Cloud
+streamlit>=1.28.0
+pandas>=1.5.0
+plotly>=5.0.0
+Pillow>=9.0.0
+fpdf2>=2.7.0
+python-dotenv>=0.19.0
+bcrypt>=4.0.0
+
+# Dropbox e backup - ESSENCIAL para fotos
+dropbox>=11.36.0
+requests>=2.28.0
+
+# Outras dependências
+numpy>=1.21.0
+pytz>=2021.3
